[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/assets/images/ships/playerShip3_red.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/assets/audio/music/denise.wav" type="AudioStream" id=3]
[ext_resource path="res://Objects/LaserWeapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/Wraparound.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -33, 40, 28, -40, 28 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.396851 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LaserWeapon" parent="." instance=ExtResource( 4 )]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="ImmortalTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ImmortalSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Wraparound" parent="." instance=ExtResource( 5 )]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
[connection signal="timeout" from="ImmortalTimer" to="." method="_on_ImmortalTimer_timeout"]
